--- a/src/my-app.html
+++ b/src/my-app.html
@@ -1386,8 +1386,8 @@ n&&e.updateNativeStyleProperties(document.documentElement,this.customStyle)}};re
 
     <app-drawer-layout fullbleed="">
       
-      <app-drawer id="drawer">
-        <app-toolbar>Menu</app-toolbar>
+      <app-drawer id="drawer" force-Narrow="true">
+        <app-toolbar>MURAT</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="view1" href="/view1">View One</a>
           <a name="view2" href="/view2">View Two</a>
